--- a/web/src/main/web/src/index.html
+++ b/web/src/main/web/src/index.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
     <title>Now Playing</title>
     <!-- APPLE STUFF -->
 
@@ -15,12 +16,13 @@
     <!-- script(src="https://unpkg.com/remarkable@1.6.2/dist/remarkable.min.js")-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="less/main.less" rel="stylesheet">
+
 </head>
 <body>
 <div class="container">
     <div id="content"></div>
 </div>
-<script src="/bundle.js" type="text/javascript"></script>
-<script src="http://jsconsole.com/js/remote.js?a8364df7-239e-4ce0-aeeb-252ab5775759"></script>
+<script src="jsx/index.jsx" type="text/javascript"></script>
 </body>
 </html>
