--- a/web/src/main/web/src/index.html
+++ b/web/src/main/web/src/index.html
@@ -14,8 +14,7 @@
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
     <!-- script(src="https://unpkg.com/babel-core@5.8.38/browser.min.js")-->
     <!-- script(src="https://unpkg.com/remarkable@1.6.2/dist/remarkable.min.js")-->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css" integrity="sha384-rtJEYb85SiYWgfpCr0jn174XgJTn4rptSOQsMroFBPQSGLdOC5IbubP6lJ35qoM9" crossorigin="anonymous">
     <link href="less/main.less" rel="stylesheet">
 
 </head>
