--- a/web/src/main/web/src/index.html
+++ b/web/src/main/web/src/index.html
@@ -22,6 +22,6 @@
 <div class="container">
     <div id="content"></div>
 </div>
-<script src="jsx/index.jsx" type="text/javascript"></script>
+<script src="jsx/index.jsx" type="module"></script>
 </body>
 </html>
